[B]Retrospect v5.5.0 - Changelog - 2021-12-29[/B]

y.t.b.d.

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Removed: Nickelodeon.no as they no longer provide videos.
* Removed: NickJr.se as they no longer provide videos.