@@ -40,3 +40,8 @@ class TestSvtChannel(ChannelTest):
         url = "https://api.svt.se/videoplayer-api/video/e2DDJzo"
         item = self._test_video_url(url)
         self.assertIsNotNone(item)
+
+    def test_html_video_update(self):
+        url = "https://www.svtplay.se/video/24060250/i-am-patrick-swayze"
+        item = self._test_video_url(url)
+        self.assertTrue(item.url.endswith("82mMLWX"))
