@@ -11,3 +11,4 @@ _None_
 [B]Channel related[/B]
 * Removed: Nickelodeon.no as they no longer provide videos.
 * Removed: NickJr.se as they no longer provide videos.
+* Fixed: HTML video resolved for SVT broken (Fixes #1596).
